# chat-mno

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
public/: index.html
src/: App.js  App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tray.rs
src/layouts/: Chat.vue  Model.vue  Plugins.vue  Prompt.vue  Settings.vue
src/routers/: router.js
